fixed layout of collapsable text boxes - h2 now lines up with standard page heading

--- a/favouriteQ/questions/static/questions/css/style.css
+++ b/favouriteQ/questions/static/questions/css/style.css
@@ -360,10 +360,11 @@ nav {
   .collapsable .collapsable-clip {
     max-width: 500px;
     margin: 0 auto 40px auto;
-    padding: 20px 0 40px 0;
+    padding: 0 0 40px 0;
     border-bottom: 10px solid #e41869; }
     .collapsable .collapsable-clip h2 {
-      padding: 20px 0;
+      padding: 0 0 20px 0;
+      margin-top: 0;
       margin-bottom: 20px;
       text-align: center; }
     .collapsable .collapsable-clip h3 {
