--- a/favouriteQ/questions/static/questions/scss/_collapsable.scss
+++ b/favouriteQ/questions/static/questions/scss/_collapsable.scss
@@ -13,11 +13,12 @@
   .collapsable-clip {
     max-width:500px;
     margin:0 auto 40px auto;
-    padding:20px 0 40px 0;
+    padding:0 0 40px 0;
     border-bottom:10px solid #e41869;
 
     h2 {
-      padding:20px 0;
+      padding:0 0 20px 0;
+      margin-top:0;
       margin-bottom:20px;
       text-align:center;
     }
